--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings 配置站点
-title: 'your awesome title'
-description: 'your web description'
+title: 'My Journey of Classical Music Around the World'
+description: '뉴욕, 유럽, 서울의 다양한 공연장의 수준 높은 클래식 공연을 접하다'
 keywords: 'your web keywords, another keywords'
-url: 'https://abc.github.io' # your host
+url: 'https://williamcozi.github.io' # your host
 
 # nav 中文字符空格：&emsp;
 nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
-  首页: '/'
-  标签: '/tags.html'
-  时间线: '/timeline.html'
-  关于博主: '/about.html'
-  友情链接: '/friendLink.html'
+  뉴욕: '/'
+  서울: '/tags.html'
+  유럽: '/timeline.html'
+  예정: '/about.html'
+  설정: '/friendLink.html'
 
 # 博主
 author: true
