--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
 author: true
 name: 'your awesome name'
 NickName: 'your awesome nickname'
-webtitle: 'your awesome webtitle'
+webtitle: 'My Journey of Classical Music Around the World'
 bio: 'your awesome bio'
 about: true
 aboutyou: 'your introduction'
