--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
 
 # 博主
 author: true
-name: 'your awesome name'
-NickName: 'your awesome nickname'
+name: 'Younghoon'
+NickName: 'williamcozi'
 webtitle: 'My Journey of Classical Music Around the World'
 bio: 'your awesome bio'
 about: true
-aboutyou: 'your introduction'
+aboutyou: 'classical music fan since 2007'
 portraits: '/assets/profile.jpeg' # your portraits image file path
 
 # SNS
